--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
       name: "Terraform Apply"
       runs-on: "ubuntu-latest"
       steps:
-        - name: "Configure AWS Credentials" Action for GitHub Actions
+        - name: "Configure AWS Credentials"
           uses: aws-actions/configure-aws-credentials@v4
           with:
             aws-region: us-east-2
