Config github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   terraform:
-    name: "Terraform Apply"
+    name: Terraform
     runs-on: "ubuntu-latest"
     steps:
       - name: "Configure AWS Credentials"
@@ -16,4 +16,13 @@ jobs:
           aws-region: us-east-2
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: "Terraform Init"
+        run: terraform init
+
+      - name: Terraform Apply
+        run:  terraform apply --auto-approve
     
